# cpp-app

./: AGENTS.md  AGENT_STANDARDS.md  ARCHITECTURE.md  CMakeLists.txt  README.md  TEMPLATE_WORKFLOW.md  vcpkg.json
.github/workflows/: build.yml
cpp-app/: AGENTS.md  ARCHITECTURE.md  CMakeLists.txt  README.md  vcpkg.json
cpp-app/.github/workflows/: build.yml
cpp-app/src/: main.cpp
data/: sample.json
docs/: AGENT_STANDARDS.md  CONSTRAINTS.md  TEMPLATE_WORKFLOW.md
scripts/verify-standalone/: README.md  verify-windows.ps1
src/: embedded_resource.cpp  embedded_resource.h  logger.h  main.cpp
